Terraform/network.tf
# ─── VPC ──────────────────────────────────────────────────────────────────────
resource "aws_vpc" "django_vpc" {
  cidr_block           = "10.0.0.0/16"
  enable_dns_hostnames = true
  tags                 = { Name = "tesoreria-vpc" }
}

resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.django_vpc.id
  tags   = { Name = "tesoreria-igw" }
}

# ─── Subnets ──────────────────────────────────────────────────────────────────
resource "aws_subnet" "public_subnet_a" {
  vpc_id                  = aws_vpc.django_vpc.id
  cidr_block              = "10.0.1.0/24"
  availability_zone       = "us-east-1a"
  map_public_ip_on_launch = true
  tags                    = { Name = "tesoreria-subnet-a" }
}

resource "aws_subnet" "public_subnet_b" {
  vpc_id                  = aws_vpc.django_vpc.id
  cidr_block              = "10.0.2.0/24"
  availability_zone       = "us-east-1b"
  map_public_ip_on_launch = true # FIX: faltaba en la subnet B
  tags                    = { Name = "tesoreria-subnet-b" }
}

# ─── Tabla de Rutas ───────────────────────────────────────────────────────────
resource "aws_route_table" "public_rt" {
  vpc_id = aws_vpc.django_vpc.id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }
  tags = { Name = "tesoreria-public-rt" }
}

resource "aws_route_table_association" "a" {
  subnet_id      = aws_subnet.public_subnet_a.id
  route_table_id = aws_route_table.public_rt.id
}

# FIX: faltaba la asociación de la subnet B
resource "aws_route_table_association" "b" {
  subnet_id      = aws_subnet.public_subnet_b.id
  route_table_id = aws_route_table.public_rt.id
}
